--- a/styles.css
+++ b/styles.css
@@ -4,18 +4,29 @@
     padding: 0;
 }
 
+body {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+
 .container {
+    border: 10px solid black;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-content: center;
-    width: 500px;
-    height: 500px;
+    width: 520px;
+    height: 520px;
 }
 
 .box {
     flex: none;
     border: 1px solid black;
+    opacity: 0;
 }
 
 .filled {
